Agregando normalize a css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,18 @@
-#descripcion
-{
-    color: blue;
+@import url("normalize.css");
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+@import url(http://fonts.googleapis.com/css?family=Oswald);
+
+body {
+	background: orange;
+	font-family: "Open Sans", Helvetica, Arial, sans-serif;
+	width: 70%; 
+	margin-top: 0;
+	margin-right: auto;
+	margin-bottom: 0;
+	margin-left: auto;
+}
+
+h1, h2, h3, h4 {
+	font-family: "Oswald";
 
 }
