--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 @import url("normalize.css");
 @import url(http://fonts.googleapis.com/css?family=Open+Sans);
-@import url(http://fonts.googleapis.com/css?family=Oswald);
+@import url(http://fonts.googleapis.com/css?family=Patrick+Hand);
 
 body {
 	background: orange;
@@ -13,6 +13,6 @@ body {
 }
 
 h1, h2, h3, h4 {
-	font-family: "Oswald";
+	font-family: "Patrick+Hand";
 
 }
