--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,16 @@ h1, h2, h3, h4 {
 .menu-little {
 padding:0px 0px 0px 20px;
 color:#FFF;
-text-transform: uppercase;
 text-decoration: none;
 display: inline-bolck;
 font-weight: bold;
 font-size: .9em;
+}
+
+.menu-little{
+width: 100%;
+height: 30px;
+display:block;
+position: absolute;
+background-color:#333;
 }
