--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
 @import url(http://fonts.googleapis.com/css?family=Patrick+Hand);
 
 body {
-	background: orange;
+	background: #FFF;
 	font-family: "Open Sans", Helvetica, Arial, sans-serif;
 	width: 70%; 
 	margin-top: 0;
@@ -13,23 +13,38 @@ body {
 }
 
 h1, h2, h3, h4 {
-	font-family: "Patrick+Hand";
+	font-family:"Patrick Hand";
+}
 
+h1{
+	font-size: 21px;
+}
+
+h2{
+	font-size: 18px;
+}
+
+h3{
+	font-size: 14px;
 }
 
 .menu-little {
-padding:0px 0px 0px 20px;
 color:#FFF;
-text-decoration: none;
-display: inline-bolck;
-font-weight: bold;
-font-size: .9em;
+display: inline-block;
+font-size: 14px;
+width: 50%;
+height: 30px;
 }
 
-.menu-little{
-width: 100%;
-height: 30px;
-display:block;
-position: absolute;
-background-color:#333;
+.menu-little li{
+display: inline-block;	
+padding:5px 0px 0px 0px;
+}
+
+.menu-little li a{
+text-decoration: none;
+color:#8C1B14;	
+text-transform: uppercase;
+font-weight: bold;
+text-align: center;
 }
