--- a/css/styles.css
+++ b/css/styles.css
@@ -31,14 +31,11 @@ h3{
 .menu-little {
 color:#FFF;
 display: inline-block;
-font-size: 14px;
-width: 50%;
-height: 30px;
 }
 
 .menu-little li{
 display: inline-block;	
-padding:5px 0px 0px 0px;
+padding:0px;
 }
 
 .menu-little li a{
