intentando poner la imagen de marca

--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -5,3 +5,11 @@ font-size: 14px;
 width: 50%;
 height: 30px;
 }
+
+header{
+	background-image: url(../img/marcagrande.png);
+	background-repeat: no-repeat;
+	background-position:center;
+	background-size: 800px;
+}
+
