--- a/css/styles.css
+++ b/css/styles.css
@@ -44,4 +44,24 @@ color:#8C1B14;
 text-transform: uppercase;
 font-weight: bold;
 text-align: center;
+font-size: 36px
+}
+
+.menu-little {
+color:#FFF;
+display: inline-block;
+}
+
+.menu-little li{
+display: inline-block;	
+padding:0px;
+}
+
+.menu-little li a{
+text-decoration: none;
+color:#8C1B14;	
+text-transform: uppercase;
+font-weight: bold;
+text-align: right;
+font-size: 9px
 }
