--- a/css/styles.css
+++ b/css/styles.css
@@ -44,7 +44,6 @@ color:#8C1B14;
 text-transform: uppercase;
 font-weight: bold;
 text-align: center;
-font-size: 36px
 }
 
 .menu-little {
@@ -62,6 +61,5 @@ text-decoration: none;
 color:#8C1B14;	
 text-transform: uppercase;
 font-weight: bold;
-text-align: right;
-font-size: 9px
+text-align: center;
 }
