--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,7 @@ text-align: center;
 .menu-little {
 color:#FFF;
 display: inline-block;
+background-color: #FFF;
 }
 
 .menu-little li{
@@ -62,4 +63,5 @@ color:#8C1B14;
 text-transform: uppercase;
 font-weight: bold;
 text-align: center;
+padding: 30px, 30px, 0px, 300px;
 }
