--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -15,6 +15,23 @@ position: fixed;
 top: 0;
 }
 
+header{
+	background-size: 100%;
+	width: 100%;
+	height: 450px;
+}
+
+.containerbig{
+	width: 100%;
+	height: 250px;
+}
+.inicio{
+	background-size: 600px;
+	width: 100%;
+	height: 800px;
+}
+
+
 
 
 
