agregando css a menu-little

--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -11,7 +11,7 @@ h3{
 }
 
 .marcagrande{
-	padding: 150px 0px 0px 0px;
+padding: 150px 0px 0px 0px;
 }
 
 .containerbig{
@@ -23,26 +23,33 @@ height: 300px;
 font-size: 16px;
 }
 
-.menu-little {
-font-size: 14px;
-width: 60%;
-height: 50px;
-position: fixed;
-top: 0;
-}
-
 .menu-big li a{
 padding:0px 15px 0px 0px;	
 }
 
+.containerlittle{
+	
+}
+.menu-little {
+font-size: 14px;
+width: 72%;
+height: 50px;
+position: fixed;
+top: 0;
+text-align: right;
+}
+
+.menu-little li a{
+padding:0px 15px 0px 0px;
+}
+
 header{
-	background-size: 100%;
-	width: 100%;
-	height: 420px;
+background-size: 100%;
+width: 100%;
+height: 420px;
 }
 
 .inicio{
-	background-size: 600px;
 	width: 100%;
 	height: 800px;
 	padding: 20px 30px ;
@@ -55,16 +62,20 @@ header{
 	padding: 30px;
 }
 
+.descripcion ul li{
+	text-decoration: none;
+}
+
 .mision{
 	float: left;
-	width: 700px;
+	width: 50%;
 	font-size: 18px;
 	padding: 30px;
 }
 
 .vision{
 	float: right;
-	width: 700px;
+	width: 50%;
 	font-size: 18px;
 	padding: 30px;
 }
@@ -84,6 +95,8 @@ header{
 .fotorama{
 	width: 70%;
 	height: 400px;
+	border-radius: 30px;
+	float: right;
 }
 
 .contacto{
