--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -37,7 +37,7 @@ text-align: right;
 }
 
 .menu-little li a{
-padding:0px 15px 0px 0px;
+padding: 20px 20px 0px 0px;
 }
 
 header{
@@ -46,44 +46,34 @@ width: 100%;
 height: 420px;
 }
 
-.inicio{
+#inicio{
 	width: 100%;
 	height: 800px;
-	padding: 20px 30px ;
 }
 
-.descripcion{
-	width: 100%;
-	text-align: center;
-	height: 150px;
-	padding: 30px;
-}
 
-.descripcion ul li{
-	text-decoration: none;
-}
 
 .mision{
 	float: left;
-	width: 50%;
-	font-size: 18px;
+	width: 43%;
+	font-size: 16px;
 	padding: 30px;
 }
 
 .vision{
 	float: right;
-	width: 50%;
-	font-size: 18px;
+	width: 43%;
+	font-size: 16px;
 	padding: 30px;
 }
 
-.nuestrahistoria{
+#nuestrahistoria{
 	width: 100%;
 	height: 800px;
 	padding: 20px 30px ;
 }
 
-.nuestrostrabajos{
+#nuestrostrabajos{
 	width: 100%;
 	height: 800px;
 	padding: 20px 30px ;
@@ -96,7 +86,7 @@ height: 420px;
 	float: right;
 }
 
-.contacto{
+#contacto{
 	background-size: 600px;
 	width: 100%;
 	height: 800px;
