--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -48,10 +48,17 @@ height: 420px;
 
 #inicio{
 	width: 100%;
-	height: 800px;
+	height: 800px;		
+	padding: 20px 30px ;
+
 }
 
-
+.descripcion{
+	width: 100%;
+	text-align: center;
+	height: 150px;
+	padding: 30px;
+}
 
 .mision{
 	float: left;
