--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -30,14 +30,20 @@ padding:0px 15px 0px 0px;
 .menu-little {
 font-size: 14px;
 width: 72%;
-height: 50px;
+height: 60px;
 position: fixed;
 top: 0;
 text-align: right;
+padding-top: 10px;
+
+}
+
+.menu-little li{
+display: inline-block;
 }
 
 .menu-little li a{
-padding: 20px 20px 0px 0px;
+padding: 0px 30px 0px 0px;
 }
 
 header{
