--- a/css/stylebig.css
+++ b/css/stylebig.css
@@ -1,3 +1,9 @@
+a:hover{
+   
+   border-bottom: 2px solid #8C1B14;
+}
+
+
 h1{
 	font-size: 21px;
 }
@@ -13,10 +19,18 @@ h3{
 .marcagrande{
 padding: 150px 0px 0px 0px;
 }
+.marcagrande img{
+height: 250px;
+}
 
 .containerbig{
 width: 100%;
 height: 250px;
+}
+
+.logo {
+	width: "350px"; 
+	height: "250px";
 }
 
 .menu-big {
@@ -29,21 +43,27 @@ padding:0px 15px 0px 0px;
 
 .menu-little {
 font-size: 14px;
-width: 72%;
 height: 60px;
+margin-top: 0px;
 position: fixed;
-top: 0;
+padding-top: 15px;
+
 text-align: right;
-padding-top: 10px;
+top: 0;
+width: 72%;
 
 }
 
 .menu-little li{
 display: inline-block;
+padding-right: 10px;
+padding-top: 15px;
 }
-
-.menu-little li a{
-padding: 0px 30px 0px 0px;
+.menu-little img {
+height:55px;
+position: absolute;
+left: 0px;
+top:10px;
 }
 
 header{
@@ -56,28 +76,37 @@ height: 420px;
 	width: 100%;
 	height: 800px;		
 	padding: 20px 30px ;
+	text-align: justify;
 
 }
 
 .descripcion{
-	width: 100%;
-	text-align: center;
+	width: 90%;
 	height: 150px;
 	padding: 30px;
 }
 
-.mision{
-	float: left;
-	width: 43%;
-	font-size: 16px;
-	padding: 30px;
+.seccion-inicio h2{
+	text-align: center;
 }
 
-.vision{
-	float: right;
-	width: 43%;
+.mision{
+	position: absolute;
+
+	right: 0px;
+	width: 30%;
 	font-size: 16px;
-	padding: 30px;
+	padding: 250px;
+}
+
+.origenes{
+	position: absolute;
+	 
+	left: 20px;
+	float: right;
+	width: 30%;
+	font-size: 16px;
+	padding: 250px 30px 20px 225px;
 }
 
 #nuestrahistoria{
