--- a/css/styles.css
+++ b/css/styles.css
@@ -3,25 +3,107 @@
 @import url(http://fonts.googleapis.com/css?family=Patrick+Hand);
 
 body {
-	background: #FFF;
-	font-family: "Open Sans", Helvetica, Arial, sans-serif;
-	width: 70%; 
-	margin-top: 0;
-	margin-right: auto;
-	margin-bottom: 0;
-	margin-left: auto;
+background: #FFF;
+font-family: "Open Sans", Helvetica, Arial, sans-serif;
+width: 70%; 
+margin-top: 0;
+margin-right: auto;
+margin-bottom: 0;
+margin-left: auto;
 }
 
 h1, h2, h3, h4 {
-	font-family:"Patrick Hand";
+font-family:"Patrick Hand";
 }
 
+h1{
+font-size: 21px;
+}
+
+h2{
+font-size: 18px;
+}
+
+h3{
+font-size: 14px;
+}
+
+a:hover{   
+border-bottom: 2px solid #8C1B14;
+}
+
+.marcagrande{
+padding: 150px 0px 0px 0px;
+}
+
+.marcagrande img{
+height: 250px;
+}
+
+.containerbig{
+width: 100%;
+height: 250px;
+}
+
+.logo {
+width: "350px"; 
+height: "250px";
+}
+
+.menu-big {
+font-size: 16px;
+}
+
+.menu-big li a{
+padding:0px 15px 0px 0px;	
+}
+
+.menu-little {
+position: absolute;
+color:#FFF;
+display: inline-block;
+background-color: #FFF;
+font-size: 14px;
+height: 60px;
+margin-top: 0px;
+position: fixed;
+padding-top: 15px;
+text-align: right;
+top: 0;
+width: 72%;
+}
+
+.menu-little li{
+display: inline-block;
+padding-right: 10px;
+padding-top: 15px;
+}
+
+.menu-little li a{
+text-decoration: none;
+color:#8C1B14;	
+text-transform: uppercase;
+font-weight: bold;
+}
+
+.menu-little img {
+height:55px;
+position: absolute;
+left: 0px;
+top:10px;
+}
+
+header{
+background-size: 100%;
+width: 100%;
+height: 420px;
+}
 
 .containerbig {
- clear:both;
- overflow:hidden;
- width:100%;
- text-align: center;
+clear:both;
+overflow:hidden;
+width:100%;
+text-align: center;
 }
 
 .menu-big {
@@ -45,23 +127,41 @@ padding:0;
 position:relative;
 }
 
-.menu-little {
-position: absolute;
-color:#FFF;
-display: inline-block;
-background-color: #FFF;
-}
-
-.menu-little li a{
-text-decoration: none;
-color:#8C1B14;	
-text-transform: uppercase;
-font-weight: bold;
-}
-
 #inicio{
 background-color:#FBD8C1;
+width: 100%;
+height: 800px;		
+padding: 20px 30px ;
+text-align: justify;
 }
+
+.descripcion{
+width: 90%;
+height: 150px;
+padding: 30px;
+}
+
+.seccion-inicio h2{
+text-align: center;
+}
+
+.mision{
+position: absolute;
+right: 0px;
+width: 30%;
+font-size: 16px;
+padding: 250px;
+}
+
+.vision{
+position: absolute; 
+left: 20px;
+float: right;
+width: 30%;
+font-size: 16px;
+padding: 250px 30px 20px 225px;
+}
+
 
 .info-inicio{
 text-decoration: none;
@@ -75,14 +175,31 @@ font-family:"Open Sans";
 text-decoration: none;
 }
 
-#nuestrahistoria{	
-	background-color:#FEF5B2; 
+#nuestrahistoria{
+background-color:#FEF5B2; 
+width: 100%;
+height: 800px;
+padding: 20px 30px ;
 }
 
 #nuestrostrabajos{
-	background-color:#FCDDA8;
+background-color:#FCDDA8;
+width: 100%;
+height: 800px;
+padding: 20px 30px ;
+}
+
+.fotorama{
+width: 70%;
+height: 400px;
+border-radius: 30px;
+float: right;
 }
 
 #contacto{
-	background-color:#FBD8C1;
+background-color:#FBD8C1;
+background-size: 600px;
+width: 100%;
+height: 800px;
+padding: 20px 30px ;
 }
